<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F2F3"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCCCCC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#D2D3DA"
                android:text="@string/c"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="35dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPLS_MNS"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#D2D3DA"
                app:cornerRadius="35dp"
                app:icon="@drawable/plus_minus_icon_black"
                app:iconGravity="textStart"
                app:iconSize="40dp"
                app:iconTint="@color/black" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPERCENT"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#D2D3DA"
                android:text="@string/percent"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="35dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDIVIDE"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#4B5EFC"
                android:text="@string/divide"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="35dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_7"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_8"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_9"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMULTIPLY"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#4B5EFC"
                android:text="@string/multiply"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="35dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_5"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_6"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMINUS"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#4B5EFC"
                android:text="@string/minus"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="35dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPLUS"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#4B5EFC"
                android:text="@string/add"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="35dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPOINT"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/dot"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:cornerRadius="1000dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBACKSPACE"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                app:cornerRadius="1000dp"
                app:icon="@drawable/backspace_icon"
                app:iconGravity="textStart"
                app:iconTint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEQUAL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#4B5EFC"
                android:text="@string/equal"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="35dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/javob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/worksans_medium"
        android:text="@string/empty"
        android:textAlignment="gravity"
        android:textColor="#878686"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/hisobla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/worksans_medium"
        android:text="@string/_6_295_5"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

</androidx.constraintlayout.widget.ConstraintLayout>